# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-30 00:22:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-8

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-8


    modified files:
     ChangeLog Python/Instances.hs


2005-01-30 00:15:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-7

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-7


    new files:
     Python/Instances.hs Python/Utils.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs


2005-01-30 00:10:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-6

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-6


    new files:
     Python/Interpreter.hs

    removed files:
     Python/Interpreter.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs


2005-01-29 23:53:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-5

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-5


    new files:
     glue/.arch-ids/=id glue/glue.h

    removed files:
     glue/.arch-ids/=id

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs glue/glue.c

    renamed files:
     Python/Types.hsc
       ==> Python/Types.hs
     glue/glue.c
       ==> glue/glue.c

    new directories:
     glue

    removed directories:
     glue

    renamed directories:
     glue/.arch-ids
       ==> glue/.arch-ids


2005-01-29 23:24:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-4

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-4


    new files:
     Python/Types.hsc glue/glue.c

    removed files:
     Python/Types.hs glue/test.c

    modified files:
     ChangeLog MissingPy.cabal


2005-01-29 22:04:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-3

    Summary:
      Initial cabal test success
    Revision: