@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-30 00:34:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-9
+
+    Summary:
+      checkpointing
+    Revision:
+      missingexts--head--0.7--patch-9
+
+
+    modified files:
+     ChangeLog MissingPy.cabal Python/Instances.hs Python/Types.hs
+
+
 2005-01-30 00:22:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-8
 
     Summary:
